--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.ccheptea.auto.value
-VERSION_NAME=0.1.0
+VERSION_NAME=0.1.0-SNAPHOT
 
 POM_ARTIFACT_ID=auto-value-node
 POM_NAME=AutoValue: Node Extension
