--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ version '0.1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: "net.ltgt.apt"
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
@@ -20,6 +20,9 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        maven {
+            url "https://jitpack.io"
+        }
     }
     dependencies {
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.9"
@@ -29,17 +32,16 @@ buildscript {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.squareup:javapoet:1.8.0'
-    compile 'com.google.auto.value:auto-value:1.3'
+    compile 'com.google.auto.value:auto-value:1.4-rc3'
     compileOnly 'com.google.auto.service:auto-service:1.0-rc3'
     compile 'com.google.auto:auto-common:0.6'
-
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.28'
     testCompile 'com.google.testing.compile:compile-testing:0.9'
     testCompile 'com.squareup:javapoet:1.8.0'
-    testCompile 'com.google.auto.value:auto-value:1.3'
-    testCompile 'com.google.auto.service:auto-service:1.0-rc2'
+    testCompile 'com.google.auto.value:auto-value:1.4-rc3'
+    testCompile 'com.google.auto.service:auto-service:1.0-rc3'
     testCompile files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
     testCompile files("${buildDir}/generated")
 }
