--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ version '0.1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: "net.ltgt.apt"
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -42,6 +42,6 @@ dependencies {
     testCompile 'com.squareup:javapoet:1.8.0'
     testCompile 'com.google.auto.value:auto-value:1.4-rc3'
     testCompile 'com.google.auto.service:auto-service:1.0-rc3'
-    testCompile files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
+    testCompile files(Jvm.current().getToolsJar())
     testCompile files("${buildDir}/generated")
 }
