--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ version '0.1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: "net.ltgt.apt"
 
-sourceCompatibility = 1.8
+targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_7
 
 repositories {
     mavenCentral()
