Prepared for Travis. Added readme file. Added change log file.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 GROUP=com.ccheptea.auto.value
-VERSION_NAME=0.1.0-SNAPHOT
+VERSION_NAME=0.1.0-SNAPSHOT
 
 POM_ARTIFACT_ID=auto-value-node
 POM_NAME=AutoValue: Node Extension
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=None
+POM_DESCRIPTION=Extension that makes autovalue objects chainable
 
 POM_URL=https://github.com/ccheptea/auto-value-node/
 POM_SCM_URL=https://github.com/ccheptea/auto-value-node/
