--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,42 @@
-import org.gradle.internal.jvm.Jvm
-
-group 'com.ccheptea.auto.value'
-version '0.1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: "net.ltgt.apt"
-
-targetCompatibility = JavaVersion.VERSION_1_7
-sourceCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenCentral()
-    maven {
-        url "https://oss.sonatype.org/content/repositories/snapshots/"
-    }
-}
-
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        maven {
-            url "https://jitpack.io"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.9"
-    }
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile 'com.squareup:javapoet:1.8.0'
-    compile 'com.google.auto.value:auto-value:1.4-rc3'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc3'
-    compile 'com.google.auto:auto-common:0.6'
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.google.truth:truth:0.28'
-    testCompile 'com.google.testing.compile:compile-testing:0.9'
-    testCompile 'com.squareup:javapoet:1.8.0'
-    testCompile 'com.google.auto.value:auto-value:1.4-rc3'
-    testCompile 'com.google.auto.service:auto-service:1.0-rc3'
-    testCompile files(Jvm.current().getToolsJar())
-    testCompile files("${buildDir}/generated")
-}
-
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+//import org.gradle.internal.jvm.Jvm
+//
+//group 'com.ccheptea.auto.value'
+//version '0.1.0-SNAPSHOT'
+//
+//apply plugin: 'java'
+//apply plugin: "net.ltgt.apt"
+//
+//targetCompatibility = JavaVersion.VERSION_1_7
+//sourceCompatibility = JavaVersion.VERSION_1_7
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//buildscript {
+//    repositories {
+//        maven {
+//            url "https://plugins.gradle.org/m2/"
+//        }
+//    }
+//    dependencies {
+//        classpath "net.ltgt.gradle:gradle-apt-plugin:0.9"
+//    }
+//}
+//
+//dependencies {
+//    testCompile group: 'junit', name: 'junit', version: '4.11'
+//    compile 'com.squareup:javapoet:1.8.0'
+//    compile 'com.google.auto.value:auto-value:1.4-rc3'
+//    compileOnly 'com.google.auto.service:auto-service:1.0-rc3'
+//    compile 'com.google.auto:auto-common:0.6'
+//
+//    testCompile 'junit:junit:4.12'
+//    testCompile 'com.google.truth:truth:0.28'
+//    testCompile 'com.google.testing.compile:compile-testing:0.9'
+//    testCompile 'com.squareup:javapoet:1.8.0'
+//    testCompile 'com.google.auto.value:auto-value:1.4-rc3'
+//    testCompile 'com.google.auto.service:auto-service:1.0-rc3'
+//    testCompile files(Jvm.current().getToolsJar())
+//    testCompile files("${buildDir}/generated")
+//}
