Prepare for next release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.ccheptea.auto.value
-VERSION_NAME=0.1.3
+VERSION_NAME=0.2.0-SNAPSHOT
 
 POM_DESCRIPTION=Extension that makes autovalue objects chainable
 
