--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.annimon:stream:1.1.5'
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
