Added simple method to transform values into observables. Added posibility to execute an action regardless if the value is null

--- a/node/gradle.properties
+++ b/node/gradle.properties
@@ -1,3 +1,5 @@
 POM_ARTIFACT_ID=auto-value-node
 POM_NAME=AutoValue: Node Extension
 POM_PACKAGING=jar
+
+POM_DESCRIPTION=Extension that makes autovalue objects chainable
