--- a/runtime/gradle.properties
+++ b/runtime/gradle.properties
@@ -1,3 +1,4 @@
 POM_ARTIFACT_ID=auto-value-node-runtime
 POM_NAME=AutoValue: Node Extension Runtime
 POM_PACKAGING=jar
+POM_DESCRIPTION=Runtime component for auto-value-node
