Next version setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.ccheptea.auto.value
-VERSION_NAME=0.2.8
+VERSION_NAME=0.3.0-SNAPSHOT
 
 POM_URL=https://github.com/ccheptea/auto-value-node/
 POM_SCM_URL=https://github.com/ccheptea/auto-value-node/
